packages/tree-sitter-cinnabar/grammar.js
    source_file: ($) => seq(optional($._newline), repeat(seq($._item, $._newline))),

    // ---- comments -------------------------------------------------------
    // `#` always opens one. There is no `#` operator to disambiguate
    // against and no preprocessor, which is why comments can live in
    // `extras` without qualification. Block comments do not nest.
    _item: ($) =>
      choice(
        $.module_declaration,
        $.use_declaration,
        $.type_declaration,
        $.native_type_declaration,
        $.trait_declaration,
        $.impl_declaration,
        $.function_declaration,
        $.native_function_declaration,
        $.const_declaration,
      ),

    visibility: () => "pub",

    type_declaration: ($) =>
      seq(
        optional($.visibility),
        "type",
        field("name", $.type_identifier),
        optional($.type_parameters),
        $._newline,
        field("body", repeat(seq(choice($.field_declaration, $.variant_declaration), $._newline))),
        "end",
      ),

    field_declaration: ($) =>
      seq(optional($.visibility), field("name", $.identifier), ":", field("type", $._type)),

    variant_declaration: ($) =>
      seq(
        optional($.visibility),
        field("name", $.type_identifier),
        optional(seq("(", commaSeparated($._type), ")")),
      ),

    function_signature: ($) =>
      seq(
        optional($.visibility),
        "fun",
        field("name", $.identifier),
        optional($.function_type_parameters),
        field("parameters", $.parameters),
        optional($.impure),
        field("return_type", $._type),
      ),

    function_declaration: ($) =>
      seq(field("signature", $.function_signature), $._newline, field("body", optional($.block)), "end"),

    // A native function is a signature and nothing else: it names a surface
    // the runtime provides, so there is no body to give it.
    native_function_declaration: ($) =>
      seq(
        optional($.visibility),
        "nat",
        "fun",
        field("name", $.identifier),
        optional($.function_type_parameters),
        field("parameters", $.parameters),
        optional($.impure),
        field("return_type", $._type),
      ),

    impure: () => "impure",

    parameters: ($) => seq("(", optional(commaSeparated($.parameter)), ")"),

    parameter: ($) => seq(field("name", $.identifier), ":", field("type", $._type)),

    const_declaration: ($) =>
      seq(
        optional($.visibility),
        "const",
        // A one-letter constant is legal SCREAMING_SNAKE_CASE, and a single
        // uppercase letter is equally a legal type name. Nothing in the
        // syntax separates them — the compiler tells them apart by which
        // symbol table the name lands in — so both are accepted here.
        field("name", choice($.constant_identifier, $.type_identifier)),
        ":",
        field("type", $._type),
        "=",
        field("value", $._expression),
      ),

    // ---- types ----------------------------------------------------------
    _type: ($) =>
      choice(
        $.generic_type,
        $.reference_type,
        $.mutable_reference_type,
        $.slice_type,
        $.array_type,
        $.self_type,
        $.path,
        $.type_identifier,
      ),

    generic_type: ($) =>
      seq(field("constructor", choice($.path, $.type_identifier)), "(", commaSeparated($._type), ")"),

    reference_type: ($) => seq("&", field("type", $._type)),
    slice_type: ($) => seq("[", field("element", $._type), "]"),
    block: ($) => repeat1(seq($._statement, $._newline)),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.assignment_statement,
        $.while_statement,
        $.if_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.expression_statement,
      ),

    let_statement: ($) =>
      seq(
        field("kind", choice("val", "var")),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    // An assignment target is a place — a name, a field chain, or an index,
    // possibly through a `&mut` reference — never an arbitrary expression.
    return_statement: ($) => seq("return", optional(field("value", $._expression))),
    expression_statement: ($) =>
      choice(
        $.call_expression,
        $.struct_expression,
        $.try_expression,
        $.match_expression,
        $.field_expression,
        $.index_expression,
        $.path,
        $.identifier,
        $.type_identifier,
        $.constant_identifier,
        $.integer_literal,
        $.hex_literal,
        $.string_literal,
        $.boolean_literal,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
      ),

    // ---- expressions ----------------------------------------------------
    _expression: ($) =>
      choice(
        $.integer_literal,
        $.hex_literal,
        $.string_literal,
        $.boolean_literal,
        $.path,
        $.identifier,
        $.type_identifier,
        $.constant_identifier,
        $.call_expression,
        $.struct_expression,
        $.index_expression,
        $.field_expression,
        $.array_expression,
        $.unary_expression,
        $.binary_expression,
        $.try_expression,
        $.match_expression,
        $.parenthesized_expression,
      ),

    _callable: ($) =>
      choice(
        $.path,
        $.identifier,
        $.type_identifier,
        $.constant_identifier,
        $.call_expression,
        $.index_expression,
        $.field_expression,
        $.struct_expression,
        $.parenthesized_expression,
      ),

    // `Name(` opens either a call or a struct literal, and only what
    // follows tells them apart: a struct literal names its fields. Both
    // readings are carried across the bracket group, and the call wins on
    // dynamic precedence where both complete — which happens only when no
    // field was named, and an unnamed field is not a struct literal.
    call_expression: ($) =>
      prec.dynamic(
        2,
        prec(PRECEDENCE.postfix, seq(field("function", $._callable), field("arguments", $.arguments))),
      ),

    arguments: ($) => seq("(", optional(commaSeparated($._expression)), ")"),

    struct_expression: ($) =>
      prec.dynamic(
        1,
        prec(
          PRECEDENCE.postfix,
          seq(
            field("type", $._callable),
            "(",
            commaSeparated(field("field", $.field_initializer)),
            ")",
          ),
        ),
      ),

    field_initializer: ($) => seq(field("name", $.identifier), ":", field("value", $._expression)),

    binary_expression: ($) => {
      const table = [
        [PRECEDENCE.or, "||"],
        [PRECEDENCE.and, "&&"],
        [PRECEDENCE.comparison, choice("==", "!=", "<", ">", "<=", ">=")],
        [PRECEDENCE.bitwise_or, "|"],
        [PRECEDENCE.bitwise_xor, "^"],
        [PRECEDENCE.bitwise_and, "&"],
        [PRECEDENCE.shift, choice("<<", ">>")],
        [PRECEDENCE.additive, choice("+", "-")],
        [PRECEDENCE.multiplicative, choice("*", "/", "%")],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(field("left", $._expression), field("operator", operator), field("right", $._expression)),
          ),
        ),
      );
    },

    // A match is exhaustive and `end`-delimited. An arm's body is either a
    // single expression on the same line or statements on the lines after
    // the `=>`.
    match_expression: ($) =>
      seq(
        "match",
        field("value", $._expression),
        $._newline,
        repeat1(field("arm", $.match_arm)),
        "end",
      ),

    // An arm's body is either one statement on the same line as the `=>`
    // — `Ok(value) => return value` is the common shape — or a block on the
    // lines after it. The block already ends each of its statements with a
    // newline, so only the one-line form needs a terminator of its own.
    match_arm: ($) =>
      seq(
        $._arm_start,
        field("pattern", $._pattern),
        "=>",
        field("body", choice(seq($._statement, $._newline), seq($._newline, $.block))),
      ),

    // ---- patterns -------------------------------------------------------
    _pattern: ($) =>
      choice($.variant_pattern, $.array_pattern, $.literal_pattern, $.path, $.type_identifier, $.identifier),

    variant_pattern: ($) =>
      seq(field("variant", choice($.path, $.type_identifier)), "(", optional(commaSeparated($._pattern)), ")"),

    // `[first, rest @ ..]` binds the head and names what is left. The rest
    // binder is a real binding, not a discard: this language has no `_`.
    array_pattern: ($) =>
      seq(
        "[",
        optional(commaSeparated($._pattern)),
        optional(seq(optional(","), field("rest", $.rest_pattern))),
        "]",
      ),

    rest_pattern: ($) => seq(field("name", $.identifier), "@", ".."),

    path: ($) =>
      prec.left(
        seq(
          choice($.type_identifier, $.identifier, $.constant_identifier),
          repeat1(seq(".", choice($.type_identifier, $.identifier, $.constant_identifier))),
        ),
      ),

    // Three identifier shapes, because the compiler enforces three. A
    // grammar that accepted one identifier rule everywhere would accept
    // programs the lexer rejects.
    identifier: () => /[a-z][a-z0-9_]*/,
    type_identifier: () => /[A-Z][A-Za-z0-9]*/,
    constant_identifier: () => /[A-Z][A-Z0-9_]+/,

    integer_literal: () => /[0-9]+/,
